Upgrade dialog z-index corrected.

--- a/sources/easygenerator.Web/Content/upgradePopup.less
+++ b/sources/easygenerator.Web/Content/upgradePopup.less
@@ -101,7 +101,7 @@
     bottom: 0;
     right: 0;
     background-color: @background-dialog-color;
-    z-index: 2300;
+    z-index: 2400;
 
     .upgrade-dialog-content {
         top: 50%;
